HUE-6077 [frontend] Fixed suggestion title white space wrap

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -877,6 +877,10 @@
       color: @cui-orange-700;
     }
 
+    .risk-list-title {
+      white-space: normal;
+    }
+
     .risk-list-description {
       margin-left:5px;
       white-space: normal;
